# cc3k_3d

./: CMakeLists.txt
header/: camera.hpp  cc3k.hpp  definition.hpp  enemylist.hpp  itemlist.hpp  model.hpp  objects.hpp  passway.hpp  playerlist.hpp  randomgan.hpp  room.hpp  shader.hpp  view.hpp  window.hpp
header/character/: character.hpp  dragon.hpp  enemy.hpp  human.hpp  player.hpp  shade.hpp
header/draw/: drawenemy.hpp  drawgold.hpp  drawing.hpp  drawplayer.hpp  drawpotion.hpp  tile.hpp  wall.hpp
header/glad/: glad.h
header/imgui/: imconfig.h
header/item/: ba.hpp  bd.hpp  dragongold.hpp  item.hpp  normalgold.hpp  ph.hpp  rh.hpp  smallgold.hpp  wa.hpp  wd.hpp
shader/: VertexShader.vs
src/: camera.cpp  cc3k.cpp  glad.c  main.cpp  map  model.cpp  passway.cpp  randomgan.cpp  room.cpp  sample  shader.cpp  view.cpp  window.cpp
src/character/: character.cpp  dragon.cpp  enemy.cpp  human.cpp  player.cpp  shade.cpp
src/draw/: drawenemy.cpp  drawgold.cpp  drawing.cpp  drawplayer.cpp  drawpotion.cpp  tile.cpp  wall.cpp
src/imgui/: imgui.cpp
src/item/: ba.cpp  bd.cpp  dragongold.cpp  item.cpp  normalgold.cpp  ph.cpp  rh.cpp  smallgold.cpp  wa.cpp  wd.cpp
